# xPST

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  AUDIT_REPORT.md  BUILD_PLAN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HANDOFF_FIXES.md  ISA.md  LICENSE  LICENSING_REPORT.md  NOTICES.md  NOTICES_QT_LGPL.md  QA_REPORT.md  README.md  SECURITY.md  build.sh  build_linux.spec  build_macos.spec  build_windows.spec  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  install-failure.yml  platform-breakage.yml  provider-request.yml
.github/workflows/: ci.yml  release.yml  test.yml
assets/: icon.icns
assets/fonts/: README.md
configs/: example.yaml
docs/: ACCOUNT-SCOPE.md  AGENT_GUIDE.md  ARCHITECTURE.md  AUDIT-2026-06-10.md  CLAUDE_HANDOFF.md  CODESIGNING.md  COMPETITIVE_ANALYSIS.md  ENTERPRISE_READINESS.md  GOAL-CONDITION-4K.md  IMPROVEMENT_PLAN.md  INSTALL.md  KNOWLEDGE_BASE_SPEC.md  LAUNCH_CHECKLIST.md  MACOS_HERMES_VALIDATION.md  MCP_TOOLS.md  OPEN_SOURCE_INTEGRATIONS.md  OWNER-SMOKE-CHECKLISTS.md  POST_SCHEDULING_DESIGN.md  PRIVACY.md  PRODUCTION_READINESS_MASTER_PLAN.md  QUICKSTART.md  README.md  ROADMAP_V2.md  SHIP-WEEK-GOAL-PROMPT.md  SHIP_READINESS_FINAL_REPORT.md  SHIP_READINESS_PLAN.md  XPST-NORTH-STAR.md  X_AUTH_GUIDE.md  adr.md  api.md
docs/research/: dashboard_component_map.md  github_integrations.md  postiz_analysis.md  pyside6_design_patterns.md  pyside6_qml_reference.md
docs/superpowers/plans/: 2026-06-10-kb-phase-1.md
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  manifest.json
graphify-out/cache/: stat-index.json
research/: platform_analytics_research.md
scripts/: build_package.py  clean_install_smoke.py  public_release_check.py  release.sh  release_artifacts.py  release_preflight.py  release_version_guard.py  scan_public_safety.py  sign_macos.sh  sign_windows.ps1  verify_desktop_package.py  verify_linux_binary.py  verify_live_platforms.py  verify_macos.sh  verify_macos_artifact.py  verify_qml_pages.py  verify_windows_exe.py
src/xpst/: __init__.py  __main__.py  analytics.py  analytics_store.py  anti_bot.py  cli.py  config.py  config_migration.py  connect.py  crash_recovery.py  desktop.py  diagnostics.py  engine.py  engine_v2.py  i18n.py  mcp_server.py  monitor.py  post_preflight.py  providers.py  readiness.py  schedule_manager.py  scheduler.py  setup.py  state.py  state_manager.py  state_store.py  updater.py
src/xpst/assets/: FONT_CHOICE.md
src/xpst/auth/: __init__.py  auth_manager.py
src/xpst/dashboard/: __init__.py  analytics.py  app.py  server.py
src/xpst/desktop_app/: backend.py  icon_glyphs.py  main.py  models.py  resource_path.py  splash_sizing.py
src/xpst/desktop_app/qml/: Icons.qml  Sidebar.qml  Theme.qml  main.qml  qmldir
src/xpst/desktop_app/qml/pages/: AboutPage.qml  AnalyticsPage.qml  ConnectPage.qml  ContentPage.qml  DashboardPage.qml  SchedulePage.qml  SettingsPage.qml
src/xpst/i18n/: en.json
src/xpst/knowledge/: __init__.py  cli_kb.py  config.py  doctor.py  manifest.py  models.py  query.py  queue.py  workspace.py
src/xpst/knowledge/course/: __init__.py  assemble.py
src/xpst/knowledge/ingest/: __init__.py  extract.py  pipeline.py  resolve.py  transcribe.py
src/xpst/knowledge/llm/: __init__.py  client.py  embeddings.py
src/xpst/knowledge/mcp/: __init__.py  tools.py
src/xpst/knowledge/organize/: __init__.py  _vectors.py  cluster.py  difficulty.py  pipeline.py  router.py
src/xpst/knowledge/store/: __init__.py  base.py  json_store.py  vector_lancedb.py
src/xpst/mcp/: __init__.py  server.py
src/xpst/plugins/: __init__.py
src/xpst/services/: __init__.py  source_service.py  upload_service.py
src/xpst/sources/: __init__.py  base.py  instagram.py  local.py  tiktok.py  x.py  youtube.py
src/xpst/usecases/: __init__.py  backfill.py  base.py  cross_post.py  delete_post.py  factory.py  fetch_videos.py  health_check.py  manual_post.py
src/xpst/utils/: __init__.py  circuit_breaker.py  content_hash.py  credentials.py  disk.py  errors.py  logger.py  metrics.py  notifications.py  pidfile.py  platform.py  progress.py  quota.py  retry.py  secure_io.py  sessions.py  shutdown.py  video.py
tests/: __init__.py  conftest.py  test_analytics.py  test_analytics_store.py  test_anti_bot.py  test_build_spec_map.py  test_carousel.py  test_clean_install_smoke.py  test_cli_commands.py  test_cli_e2e.py  test_cli_ffmpeg_guard.py  test_config.py  test_config_dir_env.py  test_crash_recovery.py  test_credentials.py  test_cross_platform.py  test_dashboard.py  test_desktop_backend.py  test_desktop_icon_glyphs.py  test_desktop_icon_loading.py  test_desktop_resource_path.py  test_desktop_schedule_new.py  test_desktop_splash_sizing.py  test_diagnostics.py  test_double_post_prevention.py  test_edge_cases.py  test_engine.py  test_engine_consolidation.py  test_engine_correctness.py  test_errors.py  test_fake_provider_workflow.py  test_hardening.py  test_import_linter_wall.py  test_integration.py  test_kb_lane_b.py  test_knowledge_cli.py  test_knowledge_cluster.py  test_knowledge_config.py  test_knowledge_course.py  test_knowledge_difficulty.py  (+50 more)
