[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xpst"
version = "0.1.0"
description = "Enterprise-grade, open-source cross-posting for short-form video"
readme = "README.md"
license = "MIT OR Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "XPST Contributors"}
]
keywords = ["cross-posting", "tiktok", "youtube-shorts", "instagram-reels", "x-twitter", "automation", "social-media"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    # Core
    "click>=8.1.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    
    # Video downloading
    "yt-dlp>=2025.1.1",
    
    # Platform APIs
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "twikit>=2.0.0",
    "instagrapi>=2.0.0",
    
    # Video processing
    "ffmpeg-python>=0.2.0",
    
    # Monitoring
    "structlog>=23.0.0",
    "prometheus-client>=0.19.0",

    # Security
    "keyring>=25.0.0",

    # Dashboard
    "nicegui>=1.4.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
xpst = "xpst.cli:main"

[project.urls]
Homepage = "https://github.com/xPSTOwner/XPST"
Documentation = "https://github.com/xPSTOwner/XPST/wiki"
Repository = "https://github.com/xPSTOwner/XPST"
Issues = "https://github.com/xPSTOwner/XPST/issues"
Changelog = "https://github.com/xPSTOwner/XPST/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/xpst"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]
ignore = ["E501", "E402", "SIM105", "SIM117", "SIM102", "B904"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true