[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xpst"
version = "0.1.0"
description = "Enterprise-grade, open-source cross-posting for short-form video"
readme = "README.md"
license = "MIT OR Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "xPST Contributors"}
]
keywords = ["cross-posting", "tiktok", "youtube-shorts", "instagram-reels", "x-twitter", "automation", "social-media"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    # Core
    "click>=8.1.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    
    # Video downloading
    "yt-dlp>=2025.1.1",
    
    # Platform APIs
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "twikit>=2.0.0",
    "instagrapi>=2.0.0",
    
    # Monitoring
    "structlog>=23.0.0",
    "prometheus-client>=0.19.0",
    
    # Security
    "keyring>=25.0.0",
    "bcrypt>=4.0.0",
    "cryptography>=41.0.0",
    
    # Dashboard API server
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    
    # Auth & HTTP
    "authlib>=1.3.0",
    "httpx>=0.24.0",
    
    # Config management
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
mcp = [
    "mcp[cli]>=1.0.0",
]
desktop = [
    "pywebview>=4.0",
]
windows = [
    "pywin32>=306; platform_system == 'Windows'",
    "winshell>=0.6; platform_system == 'Windows'",
]
dashboard = [
    "nicegui>=1.4.0,<4.0.0",
    "plotly>=5.18.0,<7.0.0",
]
pyside6 = [
    "PySide6>=6.5.0",
]
full = [
    "xpst[mcp,desktop,pyside6,dashboard,windows]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
xpst = "xpst.cli:main"
xpst-mcp = "xpst.mcp:cli_main"

[project.urls]
Homepage = "https://github.com/TysAIs/xPST"
Documentation = "https://github.com/TysAIs/xPST/wiki"
Repository = "https://github.com/TysAIs/xPST"
Issues = "https://github.com/TysAIs/xPST/issues"
Changelog = "https://github.com/TysAIs/xPST/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/xpst"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]
ignore = ["E501", "E402", "SIM105", "SIM117", "SIM102", "B904"]

[tool.ruff.lint.per-file-ignores]
"src/xpst/desktop_app/backend.py" = ["N802", "N815"]
"src/xpst/desktop_app/models.py" = ["N802"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = false
disable_error_code = [
    "arg-type",
    "assignment",
    "attr-defined",
    "call-overload",
    "dict-item",
    "import-not-found",
    "import-untyped",
    "misc",
    "no-any-return",
    "no-redef",
    "operator",
    "override",
    "return-value",
    "union-attr",
    "unused-ignore",
    "valid-type",
    "var-annotated",
]
